# rage

./: Cargo.toml  README.md
maps/: MapA.json  MapB.json  MapC.json
src/: main.rs
src/r_core/: env.rs  mod.rs  state.rs
src/r_core/controller/: controller.rs
src/r_core/map/: map.rs
src/r_core/math/: vec2.rs
src/r_core/predictor/: knn.rs  mod.rs
