[package]
name = "rage"
version = "0.1.0"
authors = ["doruk <dsekercioglu2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
packed_simd= { version = "0.3.5", package = "packed_simd_2" }
text_io = "*"